
05-12-2019, Coruja
Fixed: Stat spells not working correctly when custom MAXHITS/MAXMANA/MAXSTAM value is set on char before apply spell effect.
[sphereCrypt.ini]: Added crypt key for classic client 7.0.83 and enhanced client 4.0.83

10-12-2019, Coruja
Added: Support for new 'picinpic' dialog element on clients >= 7.0.80.0.
	-This is used to add sprites pictures on dialogs
	-Syntax: picinpic x y gump spritex spritey width height
	-Eg: picinpic 0 0 09d3b 150 150 30 30 (add background area on 0,0 to 30,30 and add sprite 150,150 from gump 09d3b inside it)
[sphere_dialog.scp]: Added 'picinpic' docs/comments
[items/multis/multis_houses_contest.scp]: Added new houses from publish 106/107
[items/sphere_item_holiday_christmas.scp]: Added new items from publish 107
[items/sphere_item_holiday_other.scp]: Added new items from publish 105
[items/sphere_item_holiday_valentines.scp]: Added new items from publish 107
[items/sphere_item_quests.scp]: Added Jolly Roger items
[items/sphere_item_vice_virtue.scp]: Added new items from publish 107
[systems/sphere_system_treasure_maps.scp]: Fixed treasure maps sometimes getting decoded to unreachable destination

15-12-2019, Coruja
Fixed: Scripts not parsing " " quotes as string correctly.

19-12-2019, Coruja
[sphere.ini]: Removed ArriveDepartMsg, AllowNewbTransfer, CanUndressPets, NTService and TelnetLog settings
	-Region arrive/depart messages can be softcoded and don't need to be hardcoded
	-Pets now can receive newbie items and be undressed by default (this can also be softcoded and doesn't require hardcoded settings)
	-Dropped support for Windows NT service to avoid performance loss (it's not recommended run a high priority game server as a low priority background service)
	-For safety purposes now all telnet console commands are logged by default
[sphere_msgs.scp]: Removed messages 'msg_arrdep_*' and 'msg_steal'

21-12-2019, Coruja
Fixed: MulFiles setting on sphere.ini not working correctly.