@@ -1,143 +1,0 @@
-accapp
-account
-acctfiles
-adminemail
-all
-allclients
-archerymindist
-archerymaxdist
-arrivedepartmsg
-autonewbiekeys
-backuplevels
-bankmaxitems
-bankmaxweight
-block
-chardef
-chartags
-clientlinger
-clientmax
-clientmaxip
-clientversion
-commandlog
-connectingmax
-connectingmaxip
-corpsenpcdecay
-corpseplayerdecay
-criminaltimer
-deadsockettime
-debugflags
-decaytimer
-defaultcommandlevel
-delete
-dungeonlight
-equippedcast
-experimental
-features
-featureslogin
-firstconnectdate
-firstip
-flipdroppeditems
-forcegarbagecollect
-freezerestarttime
-gameminutelength
-guardlinger
-guardsinstantkill
-guestsmax
-hearall
-helpingcriminalsisacrime
-hitpointpercentonrez
-itemdef
-lang
-lastconnectdate
-lastconnecttime
-lastip
-lightday
-lightnight
-list
-load
-log
-logmask
-lootingisacrime
-lostnpcteleport
-magicunlockdoor
-mapcachetime
-maxbaseskill
-maxcharsperaccount
-maxcomplexity
-maxitemcomplexity
-maxsectorcomplexity
-md5passwords
-minchardeletetime
-monsterfear
-monsterfight
-mountheight
-mulfiles
-murderdecaytime
-murdermincount
-new
-noresrobe
-noweather
-npctrainmax
-npctrainpercent
-ntservice
-optionflags
-password
-payfrompackonly
-playerghostsounds
-playerneutral
-plevel
-pollservers
-profile
-reagentlossfail
-reagentsrequired
-regen0
-regen1
-regen2
-regen3
-region
-requireemail
-respawn
-restock
-resync
-runningpenalty
-save
-savebackground
-saveperiod
-savestatics
-scpfiles
-scripts
-sector
-sectorsleep
-secure
-serv
-servip
-servname
-servport
-show
-shutdown
-skillpracticemax
-snoopcriminal
-speechpet
-speechself
-speedscalefactor
-spell
-staminalossatweight
-tag
-teleporteffectplayers
-teleporteffectstaff
-timezone
-totalconnecttime
-uid
-unused
-url
-usegodport
-usehttp
-var
-vendormaxsell
-verbose
-walkbuffer
-walkregen
-woolgrowthtime
-wopplayer
-wopstaff
-worldsave
